Draft table component now uses the correct table class name. Fixed draft text-align.

--- a/Js/Webiny/Ui/Components/Draft/styles.scss
+++ b/Js/Webiny/Ui/Components/Draft/styles.scss
@@ -1,4 +1,4 @@
-:global{
+:global {
   .rich-editor {
     .plugin-resizer {
       border: 1px dashed blue;
@@ -20,6 +20,10 @@
       }
     }
 
+    .DraftEditor-root, .DraftEditor-editorContainer, .DraftEditor-content {
+      text-align: inherit;
+    }
+
     .CodeMirror {
       min-height: 45px;
       height: auto;
@@ -34,6 +38,7 @@
       background: #fff;
       border: 1px solid #ddd;
       padding: 15px;
+      text-align: inherit;
 
       .editor-toolbar {
         min-height: 28px;
@@ -66,12 +71,13 @@
           margin-right: 6px;
           margin-bottom: 5px;
           position: relative;
-          /*z-index: 1*/ /* sven: causes problems when the toolbar goes into 2 lines */
+          /*z-index: 1*/
+          /* sven: causes problems when the toolbar goes into 2 lines */
           vertical-align: top;
 
-          .toolbar-dropdown{
+          .toolbar-dropdown {
             margin-right: 0px;
-            button{
+            button {
               line-height: 100%;
               height: 28px;
             }
@@ -101,10 +107,10 @@
         line-height: 150%;
       }
 
-      ul, ol{
-        li{
+      ul, ol {
+        li {
           list-style-position: outside;
-          >div{
+          > div {
             display: inline-block;
           }
         }
@@ -230,12 +236,17 @@
     }
   }
 
-  .table {
+  .Core_Webiny_List_table {
     .rich-editor__root {
       padding: 0;
       border: none;
       background-color: transparent;
       position: relative;
+
+      .public-DraftStyleDefault-ltr {
+        text-align: inherit;
+      }
+
     }
     .rich-editor__editor {
       margin: 0;
@@ -243,6 +254,7 @@
       .public-DraftEditor-content {
         padding-top: 0;
         min-height: 40px;
+        text-align: inherit;
       }
     }
 
